--- a/viewer/index.html
+++ b/viewer/index.html
@@ -19,45 +19,85 @@
             <p>Search, analyze, and explore your discord message history.</p>
         </header>
 
-        <section class="controls">
+        <nav class="tab-nav">
+            <button class="tab-btn active" data-tab="messages">Messages</button>
+            <button class="tab-btn" data-tab="stats" id="stats-tab-btn">Stats & Analytics</button>
+        </nav>
+
+        <section class="controls" id="messages-controls">
             <div class="search-box">
                 <input type="text" id="keyword" placeholder="Search keywords...">
                 <input type="text" id="username" placeholder="Search username...">
                 <button id="search-btn">Search</button>
             </div>
-            <div class="stats-toggle">
-                <button id="refresh-stats">Refresh Word Frequency</button>
-            </div>
         </section>
 
-        <main class="dashboard-grid">
-            <div class="panel messages-panel" id="search-results-panel">
-                <h2>Message History</h2>
-                <div id="messages-list" class="message-list">
-                    <p class="placeholder">Search to see results...</p>
+        <section class="controls" id="stats-controls" style="display: none;">
+            <div class="filter-group">
+                <span class="filter-label">Timeframe:</span>
+                <div class="timeframe-btns">
+                    <button class="time-btn" data-time="24h">24 Hours</button>
+                    <button class="time-btn" data-time="7d">Last Week</button>
+                    <button class="time-btn" data-time="30d">Last Month</button>
+                    <button class="time-btn active" data-time="all">All Time</button>
+                </div>
+            </div>
+            <button id="refresh-stats">Refresh Stats</button>
+        </section>
+
+        <main class="content-view">
+            <div id="messages-tab" class="tab-content active">
+                <div class="dashboard-grid">
+                    <div class="panel messages-panel" id="search-results-panel">
+                        <h2>Message History</h2>
+                        <div id="messages-list" class="message-list">
+                            <p class="placeholder">Search to see results...</p>
+                        </div>
+                    </div>
+
+                    <div class="panel messages-panel" id="context-panel">
+                        <div
+                            style="display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--border-color); padding-bottom: 0.5rem; margin-bottom: 1.5rem;">
+                            <h2 style="border: none; margin: 0;">Chat Context</h2>
+                            <button class="back-btn" id="context-back-btn" style="padding: 0.5rem 1rem; margin: 0;">←
+                                Back to Results</button>
+                        </div>
+                        <div id="context-list" class="message-list">
+                            <p class="placeholder">Loading context...</p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="panel messages-panel" id="context-panel">
-                <div
-                    style="display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--border-color); padding-bottom: 0.5rem; margin-bottom: 1.5rem;">
-                    <h2 style="border: none; margin: 0;">Chat Context</h2>
-                    <button class="back-btn" id="context-back-btn" style="padding: 0.5rem 1rem; margin: 0;">← Back to
-                        Results</button>
-                </div>
-                <div id="context-list" class="message-list">
-                    <p class="placeholder">Loading context...</p>
-                </div>
-            </div>
-
-            <div class="panel stats-panel">
-                <h2>Word Frequency</h2>
-                <div id="frequency-table" class="freq-container">
-                    <p class="placeholder">Click refresh to load stats...</p>
+            <div id="stats-tab" class="tab-content" style="display: none;">
+                <div class="panel stats-panel full-width">
+                    <div class="panel-header">
+                        <h2>Most Frequent Words</h2>
+                        <p class="subtitle">Filtering by selected timeframe</p>
+                    </div>
+                    <div id="frequency-table" class="freq-container large">
+                        <p class="placeholder">Select a timeframe to load stats...</p>
+                    </div>
                 </div>
             </div>
         </main>
     </div>
+    <!-- Reaction Modal -->
+    <div id="reaction-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn" onclick="closeModal()">&times;</span>
+            <h2>Select a Reaction</h2>
+            <p class="modal-subtitle">Fetching current reactions from Discord...</p>
+            <div id="emoji-list" class="emoji-list">
+                <!-- Emoji chips will be rendered here -->
+            </div>
+            <div class="modal-footer">
+                <button class="flag-btn none" onclick="closeModal()">Cancel</button>
+                <button class="flag-btn react" onclick="customReact()">Custom Emoji...</button>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
